--- a/src/conf/templates/debug.yaml
+++ b/src/conf/templates/debug.yaml
@@ -6,7 +6,7 @@ global:
 
 fe:
   out_dir: "001/features"
-  overwrite: False
+  overwrite: True
   dataset: "task2_dataset"
   n_train_uid: 25000
   use_poi_features: True
@@ -16,72 +16,6 @@ fe:
     random_state: "@/global/seed"
   cycles: [7]
   extractors:
-    - {
-        type: GroupedDiffFeatureExtractor,
-        group_key: uid,
-        group_values: ["d", "x", "y", "cycle_07"],
-        intervals: [1, -1, 2, -2],
-      }
-    - {
-        type: GroupedDiffFeatureExtractor,
-        group_key: ["uid", "d"],
-        group_values: ["t"],
-        intervals: [1, -1, 2, -2],
-      }
-    - {
-        type: GroupedDiffFeatureExtractor,
-        group_key: ["uid", "dayofweek"],
-        group_values: ["x", "y"],
-        intervals: [1, -1, 2, -2],
-      }
-    - {
-        type: GroupedShiftFeatureExtractor,
-        group_key: uid,
-        group_values: ["d", "x", "y"],
-        intervals: [1, -1, 2, -2],
-      }
-    - {
-        type: GroupedShiftFeatureExtractor,
-        group_key: ["uid", "dayofweek"],
-        group_values: ["x", "y"],
-        intervals: [1, -1, 2, -2],
-      }
-    - {
-        type: D60MaskGroupedSimpleFeatureExtoractor,
-        group_key: ["uid"],
-        group_values: ["x", "y"],
-        agg_methods: ["min", "max", "mean", "median", "std"],
-      }
-    - {
-        type: D60MaskGroupedSimpleFeatureExtoractor,
-        group_key: ["uid", "dayofweek"],
-        group_values: ["x", "y"],
-        agg_methods: ["min", "max", "mean", "median", "std"],
-      }
-    - {
-        type: D60MaskGroupedSimpleFeatureExtoractor,
-        group_key: ["uid", "t_label"],
-        group_values: ["x", "y"],
-        agg_methods: ["min", "max", "mean", "median", "std"],
-      }
-    - {
-        type: D60MaskGroupedSimpleFeatureExtoractor,
-        group_key: ["uid", "weekend"],
-        group_values: ["x", "y"],
-        agg_methods: ["min", "max", "mean", "median", "std"],
-      }
-    - {
-        type: D60MaskGroupedSimpleFeatureExtoractor,
-        group_key: ["uid", "weekend", "t_label"],
-        group_values: ["x", "y"],
-        agg_methods: ["min", "max", "mean", "median", "std"],
-      }
-    - {
-        type: D60MaskGroupedSimpleFeatureExtoractor,
-        group_key: ["uid", "dayofweek", "t_label"],
-        group_values: ["x", "y"],
-        agg_methods: ["min", "max", "mean", "median", "std"],
-      }
     - { type: RawFeatureExtractor, use_columns: ["d", "t", "x", "y"] } # + poi features
 
   regression_target_transform: z_score
@@ -115,13 +49,18 @@ nn:
     target_names: ["x", "y"]
 
   model:
-    type: CustomLSTMModelV1WithAttention
-    input_size1: ???
-    input_size2: ???
-    hidden_size: 8
-    num_layers: 1
-    dropout: 0
+    type: CustomTransformerModelV1
+    input_size_src: ???
+    input_size_tgt: ???
+    d_model: 64
     output_size: ???
+    nhead: 4
+    num_encoder_layers: 2
+    num_decoder_layers: 4
+    dropout: 0.1
+    hidden_size_lstm: 2
+    num_layers_lstm: 1
+    dropout_lstm: 0
 
   criterion:
     type: SeqMSELoss
