--- a/src/conf/templates/model_conf.yaml
+++ b/src/conf/templates/model_conf.yaml
@@ -45,3 +45,17 @@ nn:
     dropout: 0.1
     num_channels_cnn: [8, 8]
     kernel_size_cnn: 3
+
+  CustomLSTMTransformerV1:
+    type: CustomLSTMTransformerV1
+    input_size1: ???
+    input_size2: ???
+    output_size: ???
+    hidden_size: 2
+    dropout_lstm: 0
+    num_layers_lstm: 1
+    d_model: 128
+    nhead: 4
+    num_encoder_layers: 4
+    num_decoder_layers: 2
+    dropout_transfomer: 0.1
