--- a/conf/customs/000_task2.yaml
+++ b/conf/customs/000_task2.yaml
@@ -54,42 +54,24 @@ fe:
       }
     - {
         type: D60MaskGroupedSimpleFeatureExtoractor,
-        group_key: ["uid", "dayofweek"],
+        group_key: ["uid", "t"],
         group_values: ["x", "y"],
         agg_methods: ["min", "max", "mean", "median", "std"],
       }
     - {
         type: D60MaskGroupedSimpleFeatureExtoractor,
-        group_key: ["uid", "t_label"],
+        group_key: ["uid", "weekend", "t"],
         group_values: ["x", "y"],
         agg_methods: ["min", "max", "mean", "median", "std"],
-      }
-    - {
-        type: D60MaskGroupedSimpleFeatureExtoractor,
-        group_key: ["uid", "weekend"],
-        group_values: ["x", "y"],
-        agg_methods: ["min", "max", "mean", "median", "std"],
-      }
-    - {
-        type: D60MaskGroupedSimpleFeatureExtoractor,
-        group_key: ["uid", "weekend", "t_label_2h"],
-        group_values: ["x", "y"],
-        agg_methods: ["mean", "std", "max", "min"],
-      }
-    - {
-        type: D60MaskGroupedSimpleFeatureExtoractor,
-        group_key: ["uid", "dayofweek", "t_label_2h"],
-        group_values: ["x", "y"],
-        agg_methods: ["mean", "std", "max", "min"],
       }
     - {
         type: RawFeatureExtractor,
         use_columns: ["d", "t", "x", "y", "t_label", "weekend", "dayofweek"],
       } # + poi features
 
-  regression_target_transform: log
+  regression_target_transform: robust_z_score
   scaling:
-    type: StandardScaler
+    type: RobustScaler
 
 cv:
   num_fold: 5
